Small refactor of the public comment markup/styling
- Exposing proponent interface for demo

--- a/modules/publicComments/client/views/comments-proponent.html
+++ b/modules/publicComments/client/views/comments-proponent.html
@@ -84,6 +84,7 @@
         <!-- / PROTOTYPE EAO STAFF ROW TEMPLATES  -->
         
     </div>
+    
 </div>
 
 <!-- COMMENT DETAIL MODAL  -->
@@ -99,88 +100,72 @@
 			<div class="modal-body">
                 
                 <!-- STATUS ALERTS -->
-                <div class="alert alert-info">
-                    <strong>No Pillars or Valued Components have been assigned to this comment.</strong>
-                </div><!-- / STATUS ALERTS -->
+                <section class="comment-alerts">
+                    <div class="alert alert-info">
+                        <strong>No Pillars or Valued Components have been assigned to this comment.</strong>
+                    </div>
+                </section>
                 
-                <!-- COMMENT DETAILS -->
                 <section class="comment-info">
-                    <label>Posted March 21, 2016</label>
-                    <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
-                </section><!-- / COMMENT DETAILS -->
+                    <label class="control-label">Posted March 21, 2016</label>
+                    <p class="value wrap-text">"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
+                </section>
                 
                 <!-- PILLARS & VC'S -->
                 <section class="pillers-vc">  
-                    <!-- DISPLAY VALUES -->
-                    <div class="pillers-vc-display hidden">
-                        <div class="detail-row">
-                            <label>Pillars</label>
-                            <span class="value">Health, Environment, Heritage</span>
-                        </div>
-                        <div class="detail-row">
-                            <label>Valued Components</label>
-                            <span class="value">Air Quality, Water Quality, Regulatory Process, Rights & Titles</span>
-                        </div>
-                    </div><!-- / DISPLAY VALUES --> 
-                    <!-- PROPONENT ASSIGN -->
                     <div class="row">
                         <div class="col-sm-6">
-                            <div class="detail-row">
-                                <label>Assign Pillars (X)</label>
-                                <div class="pick-list panel panel-default" data-toggle="buttons">
-                                    <label class="btn btn-default active">
-                                        <input type="checkbox" autocomplete="off">Pillar 1 
-                                    </label>
-                                    <label class="btn btn-default">
-                                        <input type="checkbox" autocomplete="off">Pillar 2
-                                    </label>
-                                    <label class="btn btn-default">
-                                        <input type="checkbox" autocomplete="off">Pillar 3
-                                    </label>
-                                </div>
+                            <label class="control-label">Assign Pillars</label>
+                            <div class="pick-list panel panel-default" data-toggle="buttons">
+                                <label class="btn btn-default">
+                                    <input type="checkbox" autocomplete="off">Pillar 1 
+                                </label>
+                                <label class="btn btn-default">
+                                    <input type="checkbox" autocomplete="off">Pillar 2
+                                </label>
+                                <label class="btn btn-default">
+                                    <input type="checkbox" autocomplete="off">Pillar 3
+                                </label>
                             </div>
                         </div>
                         <div class="col-sm-6">
-                            <div class="detail-row">
-                                <label>Assign Valued Components (X)</label>
-                                <div class="pick-list panel panel-default" data-toggle="buttons">
-                                    <label class="btn btn-default" title="Really Really Really Really Really Really Long Valued Component Name">
-                                        <input type="checkbox" autocomplete="off" checked>Really Really Really Really Really Really Long Valued Component Name
-                                    </label>
-                                    <label class="btn btn-default" title="Valued Component 2">
-                                        <input type="checkbox" autocomplete="off">Valued Component 2
-                                    </label>
-                                    <label class="btn btn-default" title="Valued Component 1">
-                                        <input type="checkbox" autocomplete="off">Valued Component 1
-                                    </label>
-                                </div>
+                            <label class="control-label">Assign Valued Components</label>
+                            <div class="pick-list panel panel-default" data-toggle="buttons">
+                                <label class="btn btn-default" title="Really Really Really Really Really Really Long Valued Component Name">
+                                    <input type="checkbox" autocomplete="off" checked>Really Really Really Really Really Really Long Valued Component Name
+                                </label>
+                                <label class="btn btn-default" title="Valued Component 2">
+                                    <input type="checkbox" autocomplete="off">Valued Component 2
+                                </label>
+                                <label class="btn btn-default" title="Valued Component 1">
+                                    <input type="checkbox" autocomplete="off">Valued Component 1
+                                </label>
                             </div>
                         </div>
-                    </div><!-- / PROPONENT ASSIGN -->
+                    </div>
                 </section><!-- / PILLARS & VC'S -->
                 
                 <!-- ATTACHMENTS -->
                 <section>
-                    <div class="detail-row">
-                        <label>Attachments</label>
-                        <div class="attachments list-group">
-                            <a class="list-group-item">
-                                <div class="file-name">file-name-1.jpg</div>
-                                <button class="file-action btn btn-link">
-                                    <span class="glyphicon glyphicon-download-alt"></span>
-                                </button> 
-                            </a>
-                            <a class="list-group-item">
-                                <div class="file-name">file-name-1.jpg</div>
-                                <button class="file-action btn btn-link">
-                                    <span class="glyphicon glyphicon-download-alt"></span>
-                                </button>  
-                            </a>
-                        </div>
+                    <label class="control-label">Attachments</label>
+                    <div class="attachments list-group">
+                        <a class="list-group-item">
+                            <div class="file-name">file-name-1.jpg</div>
+                            <button class="file-action btn btn-link">
+                                <span class="glyphicon glyphicon-download-alt"></span>
+                            </button> 
+                        </a>
+                        <a class="list-group-item">
+                            <div class="file-name">file-name-1.jpg</div>
+                            <button class="file-action btn btn-link">
+                                <span class="glyphicon glyphicon-download-alt"></span>
+                            </button>  
+                        </a>
                     </div>
                 </section><!-- / ATTACHMENTS -->
                 
             </div>
+            
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="close">Cancel</button>
                 <button type="button" class="btn btn-success" data-dismiss="close" disabled="disabled">Update</button>
