--- a/modules/publicComments/client/views/comments-EAO.html
+++ b/modules/publicComments/client/views/comments-EAO.html
@@ -107,15 +107,15 @@
                 
                 <!-- STATUS ALERTS -->
                 <section class="eao-alerts">
-                    <div class="alert alert-danger hidden">
-                        Review period for this comment expires in <strong>1 Days</strong>
+                    <div class="alert alert-danger">
+                        Review period for this comment expires in <strong>1 Day</strong>
                     </div>
                     <div class="alert alert-info hidden">
                         Review period for this comment expires in <strong>7 Days</strong>
                     </div>
                     
                     <!-- DEFER NOTES -->
-                    <div class="alert alert-info eao-comment-notes">
+                    <div class="alert alert-info eao-comment-notes hidden">
                         <div class="row">
                             <div class="col-sm-8">
                                 <div class="detail-row horiz">
@@ -163,7 +163,7 @@
                         <div class="col-sm-6">
                             <label class="control-label">Assign Pillars</label>
                             <div class="pick-list panel panel-default" data-toggle="buttons">
-                                <label class="btn btn-default active">
+                                <label class="btn btn-default">
                                     <input type="checkbox" autocomplete="off">Pillar 1 
                                 </label>
                                 <label class="btn btn-default">
