--- a/modules/publicComments/client/views/comments-public.html
+++ b/modules/publicComments/client/views/comments-public.html
@@ -228,6 +228,7 @@
                                 <div class="attachments-upload-target">
                                     <input type="file" multiple accept=".jpg,.jpeg,.pdf" />
                                     <div><strong>Drag & Drop</strong> or <strong>Click Here</strong> to Upload Attachments</div>
+                                    <small><em>All attachments must be in PDF format and limited to 5MB.</em></small>
                                 </div>
                             </div>
                         </div>
