Updating to buttons instead of a radio group (technical limitation)?

--- a/modules/project-comments/client/views/public-comments/detail.html
+++ b/modules/project-comments/client/views/public-comments/detail.html
@@ -13,9 +13,10 @@
 </div>
     <section class="eao-alerts" ng-if="isEao">
         <div class="alert alert-info eao-comment-notes " ng-if="comment.eaoNotes">
-	        <!--  NOTES -->
+	        
+            <!--  NOTES -->
             <div class="row">
-                <span class="col-sm-12 value wrap-text">{{ comment.eaoNotes }}</span>
+                <span class="col-sm-12 value wrap-text">{{comment.eaoNotes}}</span>
             </div>
             <!--  / NOTES -->
         </div>
@@ -160,21 +161,35 @@
     <section ng-if="isEao">
         <label class="control-label">Set Comment Status</label>
         <div class="btn-group comment-status-btns" data-toggle="buttons">
-            <label class="btn btn-default">
-                <input type="radio" ng-model="comment.eaoStatus" value="Deferred" name="commentStatus" id="deferComment" > Defer
-            </label>
-            <label class="btn btn-danger">
-                <input type="radio" ng-model="comment.eaoStatus" value="Rejected" name="commentStatus" id="rejectComment" > Reject
-            </label>
-            <label class="btn btn-success">
-                <input type="radio" ng-model="comment.eaoStatus" value="Published" name="commentStatus" id="publishComment" > Publish
-            </label>
-            <br/>{{ comment.eaoStatus }}
+           
+            <!-- NEED TO SET ACTIVE CLASS WHEN CLICKED -->
+            <button class="btn btn-default">Defer</button>
+            <button class="btn btn-default">Reject</button>
+            <button class="btn btn-default">Publish</button>
+            
+            <div>
+                {{comment.eaoStatus}}
+            </div>
+            
+            <!-- OLD FUNCTIONALITY - TO BE REMOVED -->
+            <div class="hidden">
+                <label class="btn btn-default">
+                    <input type="radio" ng-model="comment.eaoStatus" value="Deferred" name="commentStatus" id="deferComment" > Defer
+                </label>
+                <label class="btn btn-danger">
+                    <input type="radio" ng-model="comment.eaoStatus" value="Rejected" name="commentStatus" id="rejectComment" > Reject
+                </label>
+                <label class="btn btn-success">
+                    <input type="radio" ng-model="comment.eaoStatus" value="Published" name="commentStatus" id="publishComment" > Publish
+                </label>
+            </div><!-- OLD FUNCTIONALITY - TO BE REMOVED -->
         </div>
-        <div class="row">
+        
+        <div class="row" ng-if="comment.eaoStatus === 'Deferred'">
             <label>Notes</label>
             <textarea ng-model="comment.eaoNotes"></textarea>
         </div>
+        
         <div class="row" ng-if="comment.eaoStatus === 'Rejected'">
             <label>Rejection Reason</label>
             <input type="text" ng-model="comment.rejectedReason"></input>
@@ -182,7 +197,6 @@
             <textarea ng-model="comment.rejectedNotes"></textarea>
         </div>
     </section><!-- / SET COMMENT STATUS -->
-
 
 </div>
 <div class="modal-footer">
