--- a/modules/project-comments/client/views/public-comments/detail.html
+++ b/modules/project-comments/client/views/public-comments/detail.html
@@ -161,7 +161,7 @@
         <label class="control-label">Set Comment Status</label>
         <div class="btn-group comment-status-btns" data-toggle="buttons">
             <label class="btn btn-default">
-                <input type="radio" ng-model="comment.eaoStatus" value="Deferred" name="commentStatus" id="deferComment" > Defer
+                <input type="radio" ng-model="comment.eaoStatus" ng-value="'Deferred'" name="commentStatus" id="deferComment" > Defer
             </label>
             <label class="btn btn-danger">
                 <input type="radio" ng-model="comment.eaoStatus" value="Rejected" name="commentStatus" id="rejectComment" > Reject
