--- a/modules/project-comments/client/views/public-comments/main.html
+++ b/modules/project-comments/client/views/public-comments/main.html
@@ -10,6 +10,7 @@
             <h2>Public Comment Period is Now Open!</h2>
             <h3><strong>June 1</strong> - <strong>July 15, 2016</strong></h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <tmpl-artifact-display x-mode="'view'" x-artifact="artifact" x-project="project"></tmpl-artifact-display>
             <ul class="public-comment-period-document-links">
                 <li><a class="document-name" href="#">Application Information Requirements</a><a href="#">[ VIEW FILES ]</a></li>
                 <li><a class="document-name" href="#">Associated Documentation</a><a href="#">[ VIEW FILES ]</a></li>
