--- a/modules/project-comments/client/views/public-comments/add.html
+++ b/modules/project-comments/client/views/public-comments/add.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-	<button type="button" class="btn btn-default close" data-dismiss="modal" aria-label="Close">
+	<button type="button" class="btn btn-default close" ng-click="s.cancel()">
 		<span aria-hidden="true">&times;</span>
 	</button>
 	<h3 class="modal-title">Submit a Comment</h3>
