--- a/modules/project-comments/client/views/public-comments/list.html
+++ b/modules/project-comments/client/views/public-comments/list.html
@@ -1,7 +1,7 @@
 <div >
     <div ng-if="s.isEao">
         <!-- PROTOTYPE EAO ROW TEMPLATES  -->
-        <ul >
+        <ul class="tab-container nav nav-tabs">
             <li role="presentation" class="active"><a href ng-click="s.toggle('Unvetted')">Pending Review ({{s.totalPending}})</a></li>
             <li role="presentation"><a href ng-click="s.toggle('Deferred')">Deferred ({{s.totalDeferred}})</a></li>
             <li role="presentation"><a href ng-click="s.toggle('Published')">Published ({{s.totalPublic}})</a></li>
@@ -10,7 +10,7 @@
     </div>
     <div ng-if="s.isProponent">
         <!-- PROPONENT TEMPLATES  -->
-        <ul >
+        <ul class="tab-container nav nav-tabs">
             <li role="presentation" class="active"><a href ng-click="s.toggle('Unclassified')">Unassigned ({{s.totalUnassigned}})</a></li>
             <li role="presentation"><a href ng-click="s.toggle('Classified')">Assigned ({{s.totalAssigned}})</a></li>
         </ul>
