more changes to allow saving of edits

--- a/modules/project-comments/client/views/public-comments/detail.html
+++ b/modules/project-comments/client/views/public-comments/detail.html
@@ -13,7 +13,7 @@
 </div>
     <section class="eao-alerts" ng-if="isEao">
         <div class="alert alert-info eao-comment-notes " ng-if="comment.eaoNotes">
-	        
+
             <!--  NOTES -->
             <div class="row">
                 <span class="col-sm-12 value wrap-text">{{comment.eaoNotes}}</span>
@@ -161,35 +161,17 @@
     <section ng-if="isEao">
         <label class="control-label">Set Comment Status</label>
         <div class="btn-group comment-status-btns" data-toggle="buttons">
-           
             <!-- NEED TO SET ACTIVE CLASS WHEN CLICKED -->
-            <button class="btn btn-default">Defer</button>
-            <button class="btn btn-default">Reject</button>
-            <button class="btn btn-default">Publish</button>
-            
-            <div>
-                {{comment.eaoStatus}}
-            </div>
-            
-            <!-- OLD FUNCTIONALITY - TO BE REMOVED -->
-            <div class="hidden">
-                <label class="btn btn-default">
-                    <input type="radio" ng-model="comment.eaoStatus" value="Deferred" name="commentStatus" id="deferComment" > Defer
-                </label>
-                <label class="btn btn-danger">
-                    <input type="radio" ng-model="comment.eaoStatus" value="Rejected" name="commentStatus" id="rejectComment" > Reject
-                </label>
-                <label class="btn btn-success">
-                    <input type="radio" ng-model="comment.eaoStatus" value="Published" name="commentStatus" id="publishComment" > Publish
-                </label>
-            </div><!-- OLD FUNCTIONALITY - TO BE REMOVED -->
+            <button class="btn btn-default" ng-click="comment.eaoStatus='Deferred'" ng-class="{'active':comment.eaoStatus === 'Deferred'}">Deferred</button>
+            <button class="btn btn-default" ng-click="comment.eaoStatus='Rejected'" ng-class="{'active':comment.eaoStatus === 'Rejected'}">Rejected</button>
+            <button class="btn btn-default" ng-click="comment.eaoStatus='Published'" ng-class="{'active':comment.eaoStatus === 'Published'}">Published</button>
         </div>
-        
-        <div class="row" ng-if="comment.eaoStatus === 'Deferred'">
+
+        <div class="row">
             <label>Notes</label>
             <textarea ng-model="comment.eaoNotes"></textarea>
         </div>
-        
+
         <div class="row" ng-if="comment.eaoStatus === 'Rejected'">
             <label>Rejection Reason</label>
             <input type="text" ng-model="comment.rejectedReason"></input>
