--- a/modules/project-comments/client/views/public-comments/list.html
+++ b/modules/project-comments/client/views/public-comments/list.html
@@ -11,8 +11,8 @@
     <div ng-if="s.isProponent">
         <!-- PROPONENT TEMPLATES  -->
         <ul class="tab-container nav nav-tabs">
-            <li role="presentation" class="active"><a href ng-click="s.toggle('Unclassified')">Unassigned ({{s.totalUnassigned}})</a></li>
-            <li role="presentation"><a href ng-click="s.toggle('Classified')">Assigned ({{s.totalAssigned}})</a></li>
+            <li role="presentation" class="active"><a href ng-click="s.toggleP('Unclassified')">Unassigned ({{s.totalUnassigned}})</a></li>
+            <li role="presentation"><a href ng-click="s.toggleP('Classified')">Assigned ({{s.totalAssigned}})</a></li>
         </ul>
     </div>
             <div class="public-comment-panel panel panel-default">
