encapsulated modal artifact view, correctly set status for proponent and eao, check notes, set public on comment period, still need to surface period for public

--- a/modules/core/client/views/menu.client.view.html
+++ b/modules/core/client/views/menu.client.view.html
@@ -6,6 +6,7 @@
 			<li><a ui-sref="p.detail" href>Project Details</a></li>
 			<li ng-if="ENV === 'EAO'"><a ui-sref="p.enforcements" href>Compliance Oversight</a></li>
      		<li><a ui-sref="p.documents" href>Documents</a></li>
+     		<li><a ui-sref="p.commentperiod.list" href>Public Comment Periods</a></li>
 		</ul>
 	</div><!-- / PUBLIC USERS (COMMON) -->
 
