--- a/modules/project-comments/client/views/public-comments/detail.html
+++ b/modules/project-comments/client/views/public-comments/detail.html
@@ -6,12 +6,13 @@
     <h3 ng-if="::!comment.isAnonymous" class="modal-title">Public Comment  &nbsp;&rsaquo;&nbsp; {{ ::comment.author }}</h3>
 </div>
 <div class="modal-body">
-<div>
+<!-- <div>
 <input type="checkbox" ng-model="isPublic">Public</input><br/>
 <input type="checkbox" ng-model="isEao">EAO</input><br/>
 <input type="checkbox" ng-model="isProponent">Proponent</input>
 </div>
-    <section class="eao-alerts" ng-if="isEao">
+ -->
+ 	<section class="eao-alerts" ng-if="isEao">
         <div class="alert alert-info eao-comment-notes " ng-if="comment.eaoNotes">
 
             <!--  NOTES -->
@@ -50,46 +51,16 @@
     		x-current="comment.valuedComponents"
     		x-topics="comment.topics"
     		x-pillars="comment.pillars"
+    		class="btn btn-success"
     	>
-    	Edit Valued Components
+    	Assign Valued Components
     	</button>
- <!--        <div class="row">
-            <div class="col-sm-6">
-                <label class="control-label">Assign Pillars</label>
-                <div class="pick-list panel panel-default" data-toggle="buttons">
-                    <label class="btn btn-default">
-                        <input type="checkbox" autocomplete="off">Pillar 1
-                    </label>
-                    <label class="btn btn-default">
-                        <input type="checkbox" autocomplete="off">Pillar 2
-                    </label>
-                    <label class="btn btn-default">
-                        <input type="checkbox" autocomplete="off">Pillar 3
-                    </label>
-                </div>
-            </div>
-            <div class="col-sm-6">
-                <label class="control-label">Assign Valued Components</label>
-                <div class="pick-list panel panel-default" data-toggle="buttons">
-                    <label class="btn btn-default" title="Really Really Really Really Really Really Long Valued Component Name">
-                        <input type="checkbox" autocomplete="off" checked>Really Really Really Really Really Really Long Valued Component Name
-                    </label>
-                    <label class="btn btn-default" title="Valued Component 2">
-                        <input type="checkbox" autocomplete="off">Valued Component 2
-                    </label>
-                    <label class="btn btn-default" title="Valued Component 1">
-                        <input type="checkbox" autocomplete="off">Valued Component 1
-                    </label>
-                </div>
-            </div>
-        </div>
- -->        <!-- / PILLARS & VC'S -->
     </section>
 
     <section>
 	    <!-- PILLARS / VALUED COMPONENTS -->
         <div class="detail-row">
-            <label>Pillar</label>
+            <label>Pillars</label>
             <span class="value">{{ comment.pillars.join (', &nbsp;') }}</span>
         </div>
         <div class="detail-row">
